--- a/carParking.html
+++ b/carParking.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-nav" id="navBar">
     
-    <a class="navbar-brand" href="http://127.0.0.1:5500/carParking.html">
+    <a class="navbar-brand" href="./carParking.html">
         <img src="logo.jpg" alt="Logo" height="30">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
           <a class="nav-link" href="http://127.0.0.1:5500/carParking.html#priceSection">Prices</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://127.0.0.1:5500/complain.html">Complain</a>
+          <a class="nav-link" href="./complain.html">Complain</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://127.0.0.1:5500/subscribe.html">Subscribe</a>
+          <a class="nav-link" href="./subscribe.html">Subscribe</a>
         </li>
       </ul>
     </div>
