--- a/admintable.html
+++ b/admintable.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="tableStyling.css">
     <img src="https://www.htmlcssbuttongenerator.com/iconExample-search-thin.svg" style="display: none;">
     <script>
-      onload = function() {
-        createTable()
-      };
+       window.onload = function() {
+    renderTable(subscriberArray);
+  };
     </script>
   </head>
   <body>
