--- a/Complain.html
+++ b/Complain.html
@@ -74,11 +74,10 @@
               </div>
               
               <div class="input-group">
-                <input id="submit-button" type="Submit" value="Sumbit">
+                <input id="complain-submit-button" type="Submit" value="Sumbit">
               </div>
 
             </form>
-            <script src="complain.js"></script>
           </div>
 
       </section>
@@ -86,5 +85,6 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <!-- Bootstrap JS -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script src="complain.js"></script>
 </body>
 </html>
