--- a/carParking.html
+++ b/carParking.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="./complain.html">Complain</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./">Subscribe</a>
+          <a class="nav-link" href="/subscribe.html">Subscribe</a>
         </li>
       </ul>
     </div>
