--- a/carParking.html
+++ b/carParking.html
@@ -1,184 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tirana Parking</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="carParking.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://kit.fontawesome.com/331e2d8c05.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tirana Parking</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="carParking.css">
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/331e2d8c05.js"
+      crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto">
+  </head>
+  <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-nav" id="navBar">
-    
-    <a class="navbar-brand" href="./carParking.html">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav" id="navBar">
+
+      <a class="navbar-brand" href="./carParking.html">
         <img src="logo.jpg" alt="Logo" height="30">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item order-first">
-          <a class="nav-link" href="http://127.0.0.1:5500/carParking.html#heroSection">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://127.0.0.1:5500/carParking.html#priceSection">Prices</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./complain.html">Complain</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/subscribe.html">Subscribe</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item order-first">
+            <a class="nav-link"
+              href="http://127.0.0.1:5500/carParking.html#heroSection">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+              href="http://127.0.0.1:5500/carParking.html#priceSection">Prices</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./complain.html">Complain</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/subscribe.html">Subscribe</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-  <section class="hero-section" id="heroSection">
-    <div class="container">
+    <section class="hero-section" id="heroSection">
+      <div class="container">
         <h1>Tirana Parking Management</h1>
-        <p>With Tirana Parking Management app, parking cars has never been easier. Our efficient system ensures that you can find available parking spots quickly, saving you time and hassle. Say goodbye to the stress of searching for parking and effortlessly manage your parking needs with our user-friendly app.</p>
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <h2 id="freeSpots-header">Parking spots left: 2</h2>
-        </div>
-        <div class="col-md-6 d-flex justify-content-end">
-          <a href="#" class="btn btn-primary btn-light">Park Now</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-
-  <section id="priceSection">
-    <div class="container">
-      <div class="row">
-        
-        <div class="col-lg-6">
-          <h2 class="pricingHeader">Week Days</h2>
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <div class="card mb-4">
-                <div class="card-header">
-                  <h5 class="card-title">Hourly</h5>
-                </div>
-                <div class="card-body">
-                  <h3 id="weekDayHourly" class="card-price">€1.00</h3>
-                  <ul class="list-unstyled">
-                    <li>Hourly pricing</li>
-                    <li id="weekDayMinHours">Minimum: 3 hours</li>
-                    <li>No overnight parking</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="prcing-container">
-              <div class="card mb-4">
-                <div class="card-header">
-                  <h5 class="card-title">Daily</h5>
-                </div>
-                <div class="card-body">
-                  <h3 id="weekDayDaily" class="card-price">€5.00</h3>
-                  <ul class="list-unstyled">
-                    <li>Daily pricing</li>
-                    <li>Minimum: 24 hours</li>
-                    <li>Overnight parking allowed</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            </div>
+        <p>With Tirana Parking Management app, parking cars has never been
+          easier. Our efficient system ensures that you can find available
+          parking spots quickly, saving you time and hassle. Say goodbye to the
+          stress of searching for parking and effortlessly manage your parking
+          needs with our user-friendly app.</p>
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <h2 id="freeSpots-header">Parking spots left: 2</h2>
           </div>
-
-          <h2 class="pricingHeader">Weekend</h2>
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <div class="card mb-4">
-                <div class="card-header">
-                  <h5 class="card-title">Hourly</h5>
-                </div>
-                <div class="card-body">
-                  <h3 id="weekEndHourly" class="card-price">€1.50</h3>
-                  <ul class="list-unstyled">
-                    <li>Hourly pricing</li>
-                    <li id="weekEndMinHours">Minimum: 3 hours</li>
-                    <li>No overnight parking</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="card mb-4">
-                <div class="card-header">
-                  <h5 class="card-title">Daily</h5>
-                </div>
-                <div class="card-body">
-                  <h3 id="weekEndDaily" class="card-price">€6.00</h3>
-                  <ul class="list-unstyled">
-                    <li>Daily pricing</li>
-                    <li>Minimum: 24 hours</li>
-                    <li>Overnight parking allowed</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-6">
-          <h2 class="parkingSpots">Parking Spots:</h2>
-          <div class="chart-container">
-            <div class="chart-element parking-chart">
-              <h3>Empty</h3>
-              <div class="progress">
-                <div id="firstProgress" class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="background-color: green;">75%</div>
-              </div>
-            </div>
-            <div class="chart-element parking-chart">
-              <h3>Occupied/Reserved for subscribers</h3>
-              <div class="progress">
-                <div id="secondProgress" class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" >25%</div>
-              </div>
-            </div>
-          </div>
-          <div class="spots-container">
-            <h2 style="text-align: center;">Complaints</h2>
-            <p>If you have experienced any issues with parking, such as car scratches or blocked reserved spots, please contact us using the button below:</p>
-            <button onclick="window.location.href='http://127.0.0.1:5500/complain.html'"style="float: right;" class="complain-button">Complain</button>
+          <div class="col-md-6 d-flex justify-content-end">
+            <a href="./reserve.html" class="btn btn-primary btn-light">Park Now</a>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="subscribe-section" id="subscribeSection">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="content">
-            <h1>Why should one subscribe?</h1>
-<p>By subscribing to the monthly parking plan, individuals can ensure a guaranteed spot in the parking lot at any given time, eliminating the need to worry about availability. With their reserved spot, they can conveniently check in and out of the parking lot multiple times throughout the day without incurring any additional fees. This subscription offers peace of mind and hassle-free parking, making it an ideal choice for frequent visitors or those who value convenience and flexibility in their parking arrangements.</p>
+
+    <section id="priceSection">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-6">
+            <h2 class="pricingHeader">Week Days</h2>
+            <div class="row justify-content-center">
+              <div class="col-lg-6">
+                <div class="card mb-4">
+                  <div class="card-header">
+                    <h5 class="card-title">Hourly</h5>
+                  </div>
+                  <div class="card-body">
+                    <h3 id="weekDayHourly" class="card-price">€1.00</h3>
+                    <ul class="list-unstyled">
+                      <li>Hourly pricing</li>
+                      <li id="weekDayMinHours">Minimum: 3 hours</li>
+                      <li>No overnight parking</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="prcing-container">
+                  <div class="card mb-4">
+                    <div class="card-header">
+                      <h5 class="card-title">Daily</h5>
+                    </div>
+                    <div class="card-body">
+                      <h3 id="weekDayDaily" class="card-price">€5.00</h3>
+                      <ul class="list-unstyled">
+                        <li>Daily pricing</li>
+                        <li>Minimum: 24 hours</li>
+                        <li>Overnight parking allowed</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h2 class="pricingHeader">Weekend</h2>
+            <div class="row justify-content-center">
+              <div class="col-lg-6">
+                <div class="card mb-4">
+                  <div class="card-header">
+                    <h5 class="card-title">Hourly</h5>
+                  </div>
+                  <div class="card-body">
+                    <h3 id="weekEndHourly" class="card-price">€1.50</h3>
+                    <ul class="list-unstyled">
+                      <li>Hourly pricing</li>
+                      <li id="weekEndMinHours">Minimum: 3 hours</li>
+                      <li>No overnight parking</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="card mb-4">
+                  <div class="card-header">
+                    <h5 class="card-title">Daily</h5>
+                  </div>
+                  <div class="card-body">
+                    <h3 id="weekEndDaily" class="card-price">€6.00</h3>
+                    <ul class="list-unstyled">
+                      <li>Daily pricing</li>
+                      <li>Minimum: 24 hours</li>
+                      <li>Overnight parking allowed</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="subscribe-button">
-            <button class="orange-btn">Subscribe<i class="fa fa-arrow-right"></i></button>
+
+
+          <div class="col-lg-6">
+            <h2 class="parkingSpots">Parking Spots:</h2>
+            <div class="chart-container">
+              <div class="chart-element parking-chart">
+                <h3>Empty</h3>
+                <div class="progress">
+                  <div id="firstProgress" class="progress-bar"
+                    role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                    aria-valuemax="100" style="background-color: green;">75%</div>
+                </div>
+              </div>
+              <div class="chart-element parking-chart">
+                <h3>Occupied/Reserved for subscribers</h3>
+                <div class="progress">
+                  <div id="secondProgress" class="progress-bar"
+                    role="progressbar" style="width: 25%;" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">25%</div>
+                </div>
+              </div>
+            </div>
+            <div class="spots-container">
+              <h2 style="text-align: center;">Complaints</h2>
+              <p>If you have experienced any issues with parking, such as car
+                scratches or blocked reserved spots, please contact us using the
+                button below:</p>
+              <button
+                onclick="window.location.href='http://127.0.0.1:5500/complain.html'"
+                style="float: right;" class="complain-button">Complain</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  
-  <script src="prices.js"></script>
-  <script src="spots.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    </section>
+
+    <section class="subscribe-section" id="subscribeSection">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center">
+            <div class="content">
+              <h1>Why should one subscribe?</h1>
+              <p>By subscribing to the monthly parking plan, individuals can
+                ensure a guaranteed spot in the parking lot at any given time,
+                eliminating the need to worry about availability. With their
+                reserved spot, they can conveniently check in and out of the
+                parking lot multiple times throughout the day without incurring
+                any additional fees. This subscription offers peace of mind and
+                hassle-free parking, making it an ideal choice for frequent
+                visitors or those who value convenience and flexibility in their
+                parking arrangements.</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="subscribe-button">
+              <button class="orange-btn">Subscribe<i class="fa fa-arrow-right"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="prices.js"></script>
+    <script src="spots.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
